--- a/index.html
+++ b/index.html
@@ -19,26 +19,25 @@
       <nav>
         <ul class="space-y-4">
           <li>
-            <button
-              @click="goToProcessedChangeEvents"
-              class="w-full flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
-            >
+            <button @click="goToProcessedChangeEvents"
+              class="w-full flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
               <i class="fa-solid fa-list-check"></i>
               Processed Change Events
             </button>
-            <button
-              @click="goToBudgetUploadDashboard"
-              class="mt-4 w-full flex items-center gap-2 px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition"
-            >
-              <i class="fa-solid fa-file-invoice-dollar"></i> 
+            <button @click="goToBudgetUploadDashboard"
+              class="mt-4 w-full flex items-center gap-2 px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition">
+              <i class="fa-solid fa-file-invoice-dollar"></i>
               Budget Upload Dashboard
             </button>
-             <button
-              @click="goToProductStartupDashboard"
-              class="mt-4 w-full flex items-center gap-2 px-4 py-2 bg-purple-600 text-white rounded hover:bg-purple-700 transition"
-            >
+            <button @click="goToProductStartupDashboard"
+              class="mt-4 w-full flex items-center gap-2 px-4 py-2 bg-purple-600 text-white rounded hover:bg-purple-700 transition">
               <i class="fa-solid fa-rocket"></i>
               Product Startup Dashboard
+            </button>
+            <button @click="goToToolBox"
+              class="mt-4 w-full flex items-center gap-2 px-4 py-2 bg-yellow-600 text-white rounded hover:bg-yellow-700 transition">
+              <i class="fa-solid fa-toolbox"></i>
+              Tool Box
             </button>
           </li>
         </ul>
@@ -57,9 +56,13 @@
         },
         goToProductStartupDashboard() {
           window.location.href = 'product-startup-dashboard.html';
+        },
+        goToToolBox() {
+          window.location.href = 'toolbox.html';
         }
       }
     }).mount('#app');
   </script>
 </body>
+
 </html>
